2003-04-23  olicha  <olivier.chapuis@free.fr>

	* FvwmTaskBar/FvwmTaskBar.c (StartMeUp):
	* FvwmTaskBar/Start.c (StartButtonInit):
	Fixed some minor memory leaks

	* FvwmTaskBar/ButtonArray.c (ButtonDraw): 
	Fixed a Region leaks when a buttons has no title

2003-04-22  Mikhael Goikhman  <migo@homemail.com>

	* FvwmPerl/FvwmPerl.in:
	fixed preprocess action parameter parsing, several optimizations

2003-04-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmPager/x_pager.c (AddNewWindow):
	* FvwmPager/FvwmPager.c (list_configure):
	(list_iconify):
	(list_add):
	fixed iconified windows without an icon showing up after a restart in
	the pager; also fixes iconified windows flashing for a moment when they
	first show up in the pager (e.g. Style * StartIconic).

	* FvwmPager/FvwmPager.c (list_configure):
	(list_iconify):
	do not display an icon if a window has none on the desktop

2003-04-16  Mikhael Goikhman  <migo@homemail.com>

	* FvwmEvent/FvwmEvent.c:
	* FvwmEvent/FvwmEvent.1:
	window related event handlers are now executed within a window id,
	so PassId is not really needed; several fixes

2003-04-15  Mikhael Goikhman  <migo@homemail.com>

	* FvwmGtk/FvwmGtk.1:
	* FvwmGtk/windowlist.c:
	* FvwmProxy/FvwmProxy.1:
	* FvwmProxy/FvwmProxy.c:
	* FvwmWindowMenu/FvwmWindowMenu.in:
	WindowListFunc is executed now within a window context,
	so "WindowId $0" is not needed anymore in its definition
	These 3 windolist modules support execution of WindowListFunc
	in the old and the new ways for now.

2003-04-14  olicha  <olivier.chapuis@free.fr>

	* FvwmScript/Scripts/FvwmScript-FileBrowser:
	* FvwmScript/Scripts/FvwmScript-BellSetup:
	* FvwmScript/Scripts/FvwmScript-ScreenSetup:
	* FvwmScript/Scripts/FvwmScript-PointerSetup:
	* FvwmScript/Scripts/FvwmScript-KeyboardSetup:
	Added gettext support. Relayout.

	* FvwmScript/FvwmScript.1:
	* FvwmScript/script.y:
	* FvwmScript/scanner.l:
	* FvwmScript/script.c:
	* FvwmScript/scanner.c:
	* FvwmScript/Instructions.c (ChangeLocaleTitle):